[package]
name = "ble-client"
version = "0.1.0"
authors = ["Amanjeev Sethi <aj@amanjeev.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
btleplug = "0.11.5"
tokio = { version = "1.35.1", features = ["sync", "rt", "rt-multi-thread", "macros"] }

[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.9.7"
bluez-async = "0.7.2"